# 2025-autumn-selection-resstifnurv

./: .gitignore  README.md
src/img_manager/: CMakeLists.txt  package.xml
src/img_manager/config/: manager.yml
src/img_manager/include/img_manager/: ImgProcUtil.hpp  VirtualWriter.hpp  manager_node.hpp
src/img_manager/launch/: manager.launch.py
src/img_manager/src/: ImgProcUtil.cpp  VirtualWriter.cpp  manager_node.cpp
src/virtual_camera/: CMakeLists.txt  package.xml
src/virtual_camera/config/: camera.yml
src/virtual_camera/include/virtual_camera/: VirtualCamera.hpp  camera_node.hpp
src/virtual_camera/launch/: camera.launch.py
src/virtual_camera/src/: VirtualCamera.cpp  camera_node.cpp
